# royals-market-query

./: .gitignore  PROJECT.md  README.md  pyproject.toml  query.py  scrape.py
config/: config.py  item_aliases.py
docs/: forum_scraping_multi_thread.md  listings_query.md  price_summarizer.md
src/query/: listings_query.py
src/scraper/: forum_scraping_multi_thread.py  forum_scraping_multi_thread_v2.py
src/summarizer/: price_summarizer.py
